--- a/public/milestones_controller.html
+++ b/public/milestones_controller.html
@@ -4,4 +4,5 @@
     <div class="milestones-truncated-message">The number of tags has been truncated to avoid long draw times.</div>
     <div class="milestones-incomplete-message">The container is too small to display the entire cloud. Tags might be cropped or omitted.</div>
   </div>
+  <div class="milestones-vis-wrapper"></div>
 </div>
