Move distribution options to editorConfig.

--- a/public/milestones_vis_params.html
+++ b/public/milestones_vis_params.html
@@ -28,7 +28,7 @@
     <label class="euiFormLabel" style="margin-bottom: 8px">Label arrangement</label>
     <div class="euiFormControlLayout">
       <div class="euiFormControlLayout__childrenWrapper">
-        <select class="euiSelect" ng-model="vis.params.layout.distribution" ng-options="x for x in ['top-bottom', 'top', 'bottom']" />
+        <select class="euiSelect" ng-model="vis.params.layout.distribution" ng-options="x for x in config.collections.distributions" />
         <div class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right">
           <span class="euiFormControlLayoutCustomIcon">
             <svg class="euiIcon euiFormControlLayout__icon euiFormControlLayout__icon--right euiIcon--medium" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16" viewBox="0 0 16 16">
