Add hint to use refresh button.

--- a/public/milestones_vis_params.html
+++ b/public/milestones_vis_params.html
@@ -1,3 +1,8 @@
+<div class="euiText euiText--extraSmall euiTextAlign--right euiTextColor--subdued">
+  Please use the refresh button above <br />the search bar to update the chart.
+</div>
+<br />
+
 <div class="euiForm">
   <div class="euiFormRow">
     <label class="euiFormLabel" style="margin-bottom: 8px">Label Field</label>
